--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nestjs-v9-webpack-boilerplate",
+  "name": "nestjs-fastify",
   "version": "2.1.3",
   "description": "Boilerplate for NestJS v9 with Webpack, Pnpm, Fastify, Swagger, Pino Logger, Airbnb JavaScript Guide, Google JSON Style, ESLint, Prettier, Editorconfig, Husky, Lint-Staged, Commitlint, Axios, Docker, Alias Path, Error Handling and Clustering",
   "author": "Ken So",
@@ -17,10 +17,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/kenso312/nestjs-v9-webpack-boilerplate.git"
+    "url": "https://github.com/jvalentik/nestjs-fastify"
   },
   "bugs": {
-    "url": "https://github.com/kenso312/nestjs-v9-webpack-boilerplate/issues"
+    "url": "https://github.com/jvalentik/nestjs-fastify/issues"
   },
   "scripts": {
     "build": "nest build --webpack --webpackPath ./webpack.config.js",
